assets/less/misc/kg.less
.kg-gallery-container {
  display: flex;
  flex-direction: column;
}

.kg-gallery-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.kg-gallery-image {
  cursor: pointer;

  img {
    height: 100%;
    width: 100%;
  }
}

.kg-gallery-row:not(:first-of-type) {
  margin: 10px 0 0 0;
}

.kg-gallery-image:not(:first-of-type) {
  margin: 0 0 0 10px;
}

.kg-bookmark-card {
  border: 1px solid var(--light-gray-color);
  border-radius: 4px;
  overflow: hidden;
}

.kg-bookmark-container {
  display: flex;
  overflow: hidden;
  text-decoration: none !important;

  &:after {
    display: none;
  }

  &:hover {
    opacity: 1;
  }
}

.kg-bookmark-content {
  overflow: hidden;
  padding: 25px;
}

.kg-bookmark-title {
  color: var(--darker-gray-color);
  font-size: 18px;
  font-weight: 800;
  line-height: 1.3;
}

.kg-bookmark-description {
  color: var(--secondary-text-color);
  font-size: 14px;
  margin-top: 5px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.kg-bookmark-metadata {
  align-items: center;
  display: flex;
  font-size: 13px;
  font-weight: 700;
  line-height: 1;
  margin-top: 5px;
}

.kg-bookmark-icon {
  height: 20px;
  margin-right: 5px;
  width: 20px;
}

.kg-bookmark-author,
.kg-bookmark-publisher {
  color: var(--darker-gray-color);
}

.kg-bookmark-author + .kg-bookmark-publisher:before {
  content: "•";
  font-family: serif;
  padding: 0 5px;
}

.kg-bookmark-thumbnail {
  flex-shrink: 0;
  margin-left: 20px;
  position: relative;
  width: 220px;

  img {
    height: 100%;
    object-fit: cover;
    position: absolute;
    width: 100%;
  }
}

@media (max-width: 767px) {
  .kg-bookmark-container {
    flex-direction: column;
  }

  .kg-bookmark-thumbnail {
    height: 200px;
    margin-left: 0;
    width: 100%;
  }
}

@media (min-width: 992px) {
  .kg-width-narrow {
    margin-left: calc(~"-640px / 2 + 100% / 2");
    margin-right: calc(~"-640px / 2 + 100% / 2");
    width: 640px;
  }

  .kg-width-normal {
    margin-left: calc(~"-750px / 2 + 100% / 2");
    margin-right: calc(~"-750px / 2 + 100% / 2");
    width: 750px;
  }

  .kg-width-wide {
    margin-left: calc(~"-920px / 2 + 100% / 2");
    margin-right: calc(~"-920px / 2 + 100% / 2");
    width: 920px;
  }

  .single-content .kg-width-normal img,
  .single-content .kg-width-wide img {
    width: 100%;
  }
}

.kg-width-full {
  margin-left: calc(~"-100vw / 2 + 100% / 2");
  margin-right: calc(~"-100vw / 2 + 100% / 2");
  max-width: 100vw;
}

.single-content .kg-width-full img {
  width: 100%;
}

@media (min-width: 1200px) {
  .kg-width-large {
    margin-left: calc(~"-1130px / 2 + 100% / 2");
    margin-right: calc(~"-1130px / 2 + 100% / 2");
    width: 1130px;
  }
}

